# bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  Config.cpp  Config.h  Console.cpp  Console.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  IRCThread.cpp  IRCThread.h  Query.cpp  Query.h  main.cpp
src/config/: Config.cpp  Config.h
